# semantic-flow

./: .gitignore  Makefile  README.md  SETUP.md  job.sh  pyproject.toml  requirements-cluster.txt  requirements.txt
configs/: experiments.yaml  models.yaml
data/real/: csn_python_200.jsonl
data/synthetic/: context.jsonl  core.jsonl  minimal_pairs.jsonl  obfuscation.jsonl  phase1_binding.jsonl
docs/: EXPERIMENTS.md  METHODS.md  PIPELINE.md  RESULTS.md
jobs/: common.sh  extract_context.sh  extract_core.sh  extract_obfuscation.sh  extract_real.sh  leadtime.sh  patching.sh
notebooks/: 01_data_exploration.ipynb  02_probe_development.ipynb  03_degradation_analysis.ipynb  phase1_colab.ipynb
results/manifests/: 00_generate_data_20260707_182220.json  00_generate_data_20260707_182837.json  00_generate_data_20260707_200319.json  00_generate_data_20260708_104555.json  00_generate_data_20260710_195348.json  00_generate_data_20260710_210925.json  00_generate_data_20260715_101208.json  00_generate_data_20260724_163745.json  10_extract_activations_20260707_182239.json  (+36 more)
scripts/: 00_generate_data.py  10_extract_activations.py  20_run_probes.py  30_context_degradation.py  31_obfuscation.py  40_behavioral_leadtime.py  50_causal_patching.py  90_make_paper_assets.py  evaluate_probes.py  extract_activations.py  run_experiment.py  run_phases12.py  train_probes.py
src/: utils.py
src/analysis/: tables.py  (+3 more)
tests/: fake_tokenizer.py  test_data.py  test_experiments.py  test_graphs.py  test_ground_truth_crosscheck.py  test_obfuscation.py  test_phase4.py  test_phase5.py  test_probes.py
(+54 files in other folders)
